--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@nestjs/swagger": "^5.2.1",
 		"@nestjs/typeorm": "^8.0.3",
 		"bull": "^4.10.0",
+		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
 		"dayjs": "^1.11.0",
