--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@alicloud/pop-core": "^1.7.12",
 		"@nestjs-modules/ioredis": "^1.0.1",
 		"@nestjs/axios": "^0.1.0",
 		"@nestjs/bull": "^0.6.1",
@@ -32,8 +33,8 @@
 		"@nestjs/schedule": "^2.1.0",
 		"@nestjs/swagger": "^5.2.1",
 		"@nestjs/typeorm": "^8.0.3",
-		"bull": "^4.10.0",
 		"bcryptjs": "^2.4.3",
+		"bull": "^4.10.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
 		"dayjs": "^1.11.0",
@@ -43,6 +44,7 @@
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.2.0",
+		"svg-captcha": "^1.4.0",
 		"swagger-ui-express": "^4.3.0",
 		"typeorm": "^0.2.45"
 	},
