--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"ioredis": "^4.28.5",
 		"md5": "^2.3.0",
 		"mysql": "^2.18.1",
+		"nanoid": "^3.3.4",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.2.0",
