--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"bull": "^4.10.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
+		"cookie-parser": "^1.4.6",
 		"dayjs": "^1.11.0",
 		"ioredis": "^4.28.5",
 		"md5": "^2.3.0",
@@ -53,6 +54,7 @@
 		"@nestjs/cli": "^8.0.0",
 		"@nestjs/schematics": "^8.0.0",
 		"@nestjs/testing": "^8.0.0",
+		"@types/cookie-parser": "^1.4.3",
 		"@types/cron": "^2.0.0",
 		"@types/express": "^4.17.13",
 		"@types/jest": "27.4.1",
