--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"md5": "^2.3.0",
 		"mysql": "^2.18.1",
 		"nanoid": "^3.3.4",
+		"nestjs-i18n": "^10.2.6",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.2.0",
