--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"rxjs": "^7.2.0",
 		"svg-captcha": "^1.4.0",
 		"swagger-ui-express": "^4.3.0",
-		"typeorm": "^0.2.45"
+		"typeorm": "^0.2.45",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^8.0.0",
@@ -62,6 +63,7 @@
 		"@types/multer": "^1.4.7",
 		"@types/node": "^16.0.0",
 		"@types/supertest": "^2.0.11",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.0.0",
 		"eslint": "^8.0.1",
