✨ feat(Base): 临时存储

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,11 @@ APP_SECRET =
 #AliCloud
 ALIYUN_ACCESSKEYID = 
 ALIYUN_ACCESSKEYSECRET = 
+
+#jwt配置
+JWT_SECRET = 
+JWT_EXPIRE = 
+
+#session配置
+SESSION_SECRET = 
+SESSION_EXPIRE = 
