✨ feat(user): 完善登录接口

--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,10 @@ APP_SECRET =
 ALIYUN_ACCESSKEYID = 
 ALIYUN_ACCESSKEYSECRET = 
 
-#jwt配置
+#jwt配置 7200秒、86400秒
 JWT_SECRET = 
-JWT_EXPIRE = 
+JWT_EXPIRE = 7200000
+JWT_REFRESH_EXPIRE = 86400000
 
 #session配置
 SESSION_SECRET = 
