--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,6 @@ APP_SECRET =
 ALIYUN_ACCESSKEYID = 
 ALIYUN_ACCESSKEYSECRET = 
 
-#jwt配置 7200秒、86400秒
+#jwt配置 7200秒
 JWT_SECRET = 
-JWT_EXPIRE = 7200000
-JWT_REFRESH_EXPIRE = 86400000
-
-#session配置
-SESSION_SECRET = 
-SESSION_EXPIRE = 
+JWT_EXPIRE = 7200
