📃 docs(env): 修改配置文件提示

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,36 @@
 #mysql
-ORM_TYPE = 
-ORM_HOST = 
-ORM_PORT = 
-ORM_USERNAME = 
-ORM_PASSWORD = 
-ORM_DATABASE =
-ORM_CHARSET = 
-ORM_SYNCHRONIZE =
-ORM_DATESTRINGS = 
+ORM_TYPE = mysql
+ORM_HOST = localhost
+ORM_PORT = 3306
+ORM_USERNAME = MTY4NjUzMjc1MzIxNA
+ORM_PASSWORD = MTY4NjUzMjc1MzIxNA
+ORM_DATABASE = MTY4NjUzMjc1MzIxNA
+ORM_CHARSET = utf8mb4
+ORM_SYNCHRONIZE = true
+ORM_DATESTRINGS = false
 
 #redis
-REDIS_HOST =
-REDIS_PORT =
-REDIS_DB =
-REDIS_PASSWORD =
-REDIS_KEYPREFIX =
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+REDIS_DB = 3
+REDIS_PASSWORD = MTY4NjUzMjc1MzIxNA
+REDIS_KEYPREFIX = MTY4NjUzMjc1MzIxNA
 
 #queue
-QUEUE_REDIS_HOST =
-QUEUE_REDIS_PORT =
-QUEUE_REDIS_DB =
-QUEUE_REDIS_PASSWORD =
-QUEUE_REDIS_KEYPREFIX =
+QUEUE_REDIS_HOST = localhost
+QUEUE_REDIS_PORT = 6379
+QUEUE_REDIS_DB = 4
+QUEUE_REDIS_PASSWORD = MTY4NjUzMjc1MzIxNA
+QUEUE_REDIS_KEYPREFIX = MTY4NjUzMjc1MzIxNA
 
 #app-config
-APP_ID = 
-APP_SECRET = 
+APP_ID = MTY4NjUzMjc1MzIxNA
+APP_SECRET = MTY4NjUzMjc1MzIxNA
 
 #AliCloud
-ALIYUN_ACCESSKEYID = 
-ALIYUN_ACCESSKEYSECRET = 
+ALIYUN_ACCESSKEYID = MTY4NjUzMjc1MzIxNA
+ALIYUN_ACCESSKEYSECRET = MTY4NjUzMjc1MzIxNA
 
-#jwt配置 7200秒
-JWT_SECRET = 
+#jwt配置
+JWT_SECRET = MTY4NjUzMjc1MzIxNA
 JWT_EXPIRE = 7200
