--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"class-validator": "^0.13.2",
 		"cookie-parser": "^1.4.6",
 		"dayjs": "^1.11.0",
+		"hbs": "^4.2.0",
 		"ioredis": "^4.28.5",
 		"md5": "^2.3.0",
 		"ms": "^2.1.3",
