--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"dependencies": {
 		"@alicloud/pop-core": "^1.7.12",
 		"@nestjs-modules/ioredis": "^1.0.1",
-		"@nestjs/axios": "^0.1.0",
+		"@nestjs/axios": "^3.0.0",
 		"@nestjs/bull": "^0.6.1",
 		"@nestjs/common": "^8.0.0",
 		"@nestjs/config": "^2.2.0",
@@ -34,6 +34,7 @@
 		"@nestjs/schedule": "^2.1.0",
 		"@nestjs/swagger": "^5.2.1",
 		"@nestjs/typeorm": "^8.0.3",
+		"axios": "^1.4.0",
 		"bcryptjs": "^2.4.3",
 		"bull": "^4.10.0",
 		"class-transformer": "^0.5.1",
